app/assets/styles/variables.sass
@use "sass:math"

// Colors
$external-color: grey
$background-color: #EAE2D3
$element-background-color: #FEF5E5
$second-background-color: #FAEBD7

$primary: #000000
$secondary: #B9AF9F
$accent1: #F6AE2D
$accent2: #FAD289
$alert: #DC143C
$validate: #3B9C2F
$deactivate: lightgray
$deactivate-button-text: #808080

$green-bubble: #97A281
$yellow-bubble: #C7A67E
$red-bubble: #9A7668

// Phi units
$phi: 1.618
$sqrt-phi: math.sqrt($phi);

$phi1: 1rem*$phi

$phi-0_75: math.div($phi1, math.sqrt($sqrt-phi))
$phi-0_5: math.div($phi1, $sqrt-phi)
$phi-1: math.div($phi1, $phi)
$phi-2: math.div($phi-1, $phi)

$phi1_5: $phi1*$sqrt-phi
$phi2: $phi1*$phi
$phi2_5: $phi2*$sqrt-phi
$phi3: $phi2*$phi
$phi3_5: $phi3*$sqrt-phi

// Spaces
$gap-space: $phi1_5

// Border
$border-section-framed: 8px
$border-section-separator: 10px

// Frames
$frame-max-width: calc(1280px - 2*$border-section-framed - 2*$phi3)

